Paymesh/gitops/istio/payment-api-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: payment-api
  namespace: payments
spec:
  gateways:
    - payment-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: payment-api
            port:
              number: 8080
